# Tracking_habits

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  prometheus.yaml  pyproject.toml
alembic/versions/: 2ae71f624b9b_add_profile_table.py  cfcd4398278a_add_profile_table.py
backend/: Dockerfile  celery_conf.py  celery_tasks.py  config.py  database_conf.py  models.py  record_logic.py  schemas.py  views.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile  config.py  states.py  tracking_habits_front.py  views.py
frontend/reply/: inline.py  keyboard.py
